# rust-web-practice

./: LICENSE  readme.md
hello-world/: .gitignore  Cargo.toml
hello-world/src/: main.rs
hello-world/src/database/: connection.rs  error.rs  mod.rs
hello-world/src/handlers/: helloworld.rs
hello-world/src/models/: users.rs
hello-world/src/routers/: api.rs
hello-world/src/storage/: user_storage.rs
hello-world/src/utils/: logger.rs
