[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.7"
rusqlite = "0.37.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }